# django_guard

./: .countlines.cache.db  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELTA_FILE_SHA256SUMS  DELTA_MANIFEST.json  LICENSE  Makefile  README.md  README_REPAIR.md  SECURITY.md  SHA256SUMS  directory_structure.txt  docker-compose.yml  package-lock.json  pyproject.toml
docs/: architecture.md  (+11 more)
examples/plugins/sample-reporter/: README.md  pyproject.toml
planguard-milestone-c-delta/: DELTA_MANIFEST.json  Makefile  README.md  SHA256SUMS  pyproject.toml
planguard-milestone-c-delta/apps/workbench-ui/: package.json
planguard-milestone-c-delta/apps/workbench-ui/src/: App.tsx  styles.css
planguard-milestone-c-delta/docs/adr/: 0010-workload-edges-declare-epistemic-status.md
planguard-milestone-c-delta/examples/store/artifacts/: env_7329e4f6179a473288753855dc54f4ff.json  fnd_01ac5c58c2f0447bb524bf57a3a3bceb.json  fsch_28864d3f90814a08b563f4d63225b4e2.json  qexec_aee959a7479142be876a25f4dcd9662c.json  qfam_16d62858609a4e2347c5dfdcb34f8968.json  qfam_343b4bf40726db74a9ae1d5dab60eb60.json  qfam_3acbe8daee95e6bde3fc8f6b396081ef.json  qfam_464264ef072130060b5ad9d20fc0fc7c.json  qfam_9ce126bcdc527cf6cdd157ca3e1cef9d.json  qfam_ef9ed66df853ed1bf0720cbbeded1e13.json  qtpl_59e534d5c84d49819103b15cad4bb426.json  qtpl_a16ef52f31eb4b7fa0c05779efcdcb13.json  qtpl_d4cb5234c7e54bbbb2ade2c9a6923432.json  wep_f3d80b45030cbaf7077c8bd6b58728c9.json
planguard-milestone-c-delta/examples/store/index/: asum_1d3b1627d96b44738e187f8a812ebb0a.json  drc_c47f9d6d213a4ad6aaf68b01fcb67448.json  evd_d1237bdec48b49dab12091b8d180259a.json  fnd_01ac5c58c2f0447bb524bf57a3a3bceb.json  fsch_28864d3f90814a08b563f4d63225b4e2.json  fsch_472e7feadbb047ae9bfbec499dc6a416.json  fsch_e8d43cb43e54419cbf5b3f50d2c18c04.json  qfam_343b4bf40726db74a9ae1d5dab60eb60.json  qfam_3bfb8e4a672ac35b2a49b23635c683bf.json  qfam_3ee0135bca303ade1cde373e670433d6.json  qfam_40146860bf01e2e0f1852f5cae98c17f.json  (+11 more)
planguard-milestone-c-delta/services/workbench_api/: README.md
planguard-milestone-c-delta/tests/integration/: test_django_api.py
(+2219 files in other folders)
