[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planguard"
version = "0.3.0"
description = "Artifact-first Django/PostgreSQL workload analysis and regression guard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Uzair Gheewala" }]
dependencies = [
  "pydantic>=2.13,<3",
]

[project.optional-dependencies]
api = ["Django>=5.2.15,<5.3"]
dev = [
  "Django>=5.2.15,<5.3",
  "hypothesis>=6.140,<7",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
]

[project.scripts]
planguard = "planguard.cli:main"

[project.entry-points.pytest11]
planguard = "planguard.pytest_plugin.plugin"

[tool.setuptools]
package-dir = {"" = "packages/planguard-core/src"}

[tool.setuptools.packages.find]
where = ["packages/planguard-core/src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["packages/planguard-core/src", "services/workbench_api"]
markers = [
  "contract: artifact and API contract tests",
  "property: property-oriented invariance tests",
  "integration: integration tests requiring optional dependencies",
  "planguard: capture and enforce PlanGuard budgets",
]

[tool.coverage.run]
branch = true
source = ["planguard"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
