[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planguard-sample-reporter"
version = "0.1.0"
description = "Minimal external PlanGuard reporter plugin example"
requires-python = ">=3.11"
dependencies = ["planguard>=0.7,<0.8"]

[project.entry-points."planguard.plugins"]
sample-reporter = "planguard_sample_reporter:plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
